# stream-workflow-editor

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  build_frontend.py  pyproject.toml  release.bat  release.sh
backend/: .gitignore  README.md  cli.py  config.yaml  requirements.txt
backend/api/: config.py  main.py
backend/api/routes/: execute.py  files.py  nodes.py  validate.py
backend/api/services/: __init__.py  custom_node_service.py  file_service.py  node_generator.py  workflow_service.py
backend/custom_nodes/: TestNode1.py  __init__.py  registry.json
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  USAGE.md  YAML_DISPLAY.md
frontend/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/ConfigEditor/: ConfigEditor.css  index.tsx
frontend/src/components/FileManager/: FileManager.css  index.tsx
frontend/src/components/NodeConfigPanel/: NodeConfigPanel.css  index.tsx
frontend/src/components/NodeCreator/: NodeCreator.css  index.tsx
frontend/src/services/: api.ts  nodeGenerator.ts  yamlService.ts
frontend/src/stores/: nodeInfoStore.ts  themeStore.ts  workflowStore.ts
frontend/src/types/: node.ts  workflow.ts
frontend/src/utils/: converters.ts  edgeRouter.ts  validators.ts
src/stream_workflow_editor/: __init__.py  cli.py  client.py  config.yaml  server.py
src/stream_workflow_editor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/stream_workflow_editor/api/: config.py  logger.py  main.py
src/stream_workflow_editor/custom_nodes/: TestNode1.py  __init__.py  registry.json  test_node1_node.py
src/stream_workflow_editor/static/: .gitkeep  index.html
test_subdir/: test_config.yaml
tests/: tests.yaml  大模型语音聊天工作流.yaml
workflows/: example_workflow.yaml
workflows/advanced/: complex_workflow.yaml
(+29 files in other folders)
